--- a/build.gradle
+++ b/build.gradle
@@ -65,13 +65,13 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
-            property 'forge.enabledGameTestNamespaces', 'laserio'
+            property 'forge.enabledGameTestNamespaces', 'laserio-enhanced'
 
             //Patchouli
             property 'mixin.env.remapRefMap', 'true'
             property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
             mods {
-                laserio {
+                laserio-enhanced {
                     source sourceSets.main
                 }
             }
@@ -85,12 +85,12 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
-            property 'forge.enabledGameTestNamespaces', 'laserio'
+            property 'forge.enabledGameTestNamespaces', 'laserio-enhanced'
             //Patchouli
             property 'mixin.env.remapRefMap', 'true'
             property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
             mods {
-                laserio {
+                laserio-enhanced {
                     source sourceSets.main
                 }
             }
@@ -115,10 +115,10 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
-            property 'forge.enabledGameTestNamespaces', 'laserio'
+            property 'forge.enabledGameTestNamespaces', 'laserio-enhanced'
 
             mods {
-                laserio {
+                laserio-enhanced {
                     source sourceSets.main
                 }
             }
@@ -137,7 +137,7 @@ minecraft {
             property 'mixin.env.remapRefMap', 'true'
             property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
             mods {
-                laserio {
+                laserio-enhanced {
                     source sourceSets.main
                 }
             }
@@ -257,11 +257,11 @@ jar {
     manifest {
         attributes([
                 "Specification-Title"     : "laserio-enhanced",
-                "Specification-Vendor"    : "direwolf20",
+                "Specification-Vendor"    : "tacaly",
                 "Specification-Version"   : "1", // We are version 1 of ourselves
                 "Implementation-Title"    : project.name,
                 "Implementation-Version"  : "${version}",
-                "Implementation-Vendor"   : "direwolf20",
+                "Implementation-Vendor"   : "tacaly",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
