--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ apply plugin: 'org.parchmentmc.librarian.forgegradle'
 //apply from: 'https://raw.githubusercontent.com/SizableShrimp/ForgeUpdatesRemapper/main/remapper.gradle'
 
 version = "${mod_version}"
-group = 'com.direwolf20.laserio-enhanced' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+group = 'com.tacaly.laserio-enhanced' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'laserio-enhanced'
 
 // Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
